--- a/src/components/Todo/style.scss
+++ b/src/components/Todo/style.scss
@@ -1,10 +1,12 @@
 @import "../../theme";
 
 .todo {
+  width: 36em;
   height: 24px;
-  pointer-events: none;
+  margin: auto;
   color: $font-base;
   font-size: 16px;
+  pointer-events: none;
 
   &.checked {
     text-decoration: line-through solid $font-base;
